fix: RelatedHelpList icon alignment

--- a/src/components/RelatedHelpList/index.module.scss
+++ b/src/components/RelatedHelpList/index.module.scss
@@ -2,12 +2,13 @@
 
 .relatedHelpList {
   position: relative;
+  padding: calc(var(--base) * 2) 0;
 
   .titleWrapper {
     padding-top: calc(var(--base) * 1.5);
     margin-bottom: var(--base);
   }
-  
+
   .title {
     margin: 0;
   }
